[package]
name = "hello_tonic"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello-server"
path = "src/server.rs"

[dependencies]
tonic   = {version = "0.5", features = ["compression"] }
prost   = "0.8"
tokio   = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8", features = ["v4"] }
redis = { version = "0.20.0", features = ["tokio-comp"] }
redis_ts = {version = "0.4.0", features = ['tokio-comp'] }

[build-dependencies]
tonic-build = {version = "0.5", features = ["compression"] }
